# IPGG_Test

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.ui  PlotController.cpp  PlotSplitter.cpp  main.cpp
src/include/: MainWindow.h  PlotController.h  PlotSplitter.h
